# chantal

./: .dockerignore  .gitignore  .yamllint  CONTEXT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  ROADMAP.md  TODO.md  alembic.ini  config-nginx-latest-only.yaml  config-rhel-test.yaml  pyproject.toml  renovate.json  setup-git.sh
.claude/: settings.json
.claude/commands/: sync-planning.md  update-docs.md  update-readme.md  update-roadmap.md
.claude/scripts/: check-plan-completion.sh  init-planning.sh  update-findings.sh
.claude/skills/planning-with-files/: SKILL.md
.claude/skills/repo-architecture-research/: SKILL.md
.github/: dependabot.yml
.github/workflows/: container.yml  docs.yml  lint-and-type-check.yml  release.yml  test.yml
.planning/: apt-deb-implementation.md  apt-mirror-mode-implementation.md  architecture.md  config-vs-database-strategy.md  findings.md  generic-content-model-analysis.md  metadata-mirror-support.md  mvp-scope.md  phase5-kickstart-plan.md  progress.md  proxy-and-scheduler.md  status.md  task_plan.md
.planning/archive/: PROMPT-2025-01-09.md  architecture-updates-v2.md  cli-commands.md  github-issue-db-commands.md  helm-plugin-design-2025-01-10.md  version-retention-design-2025-01-09.md  views-documentation-brief-2025-01-10.md
alembic/: env.py
alembic/versions/: .gitkeep  20260110_1617_3c10bed2aae6_add_views_tables_view_viewrepository_.py  20260110_2202_a4a922fdfc63_initial_schema_with_generic_content_.py  20260111_1138_4ae7cc6b7243_add_repository_files_table_and_.py  20260111_1242_e190d159daac_add_repository_mode_field.py  20260627_2330_b1c2d3e4f5a6_bigint_size_columns.py
docs/: .nojekyll  README.md  conf.py  index.rst
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/doctrees/api/: modules.doctree
docs/_build/doctrees/architecture/: content-addressed-storage.doctree  database-schema.doctree  overview.doctree  plugin-system.doctree
docs/_build/doctrees/configuration/: filters.doctree  overview.doctree  repositories.doctree  ssl-authentication.doctree
docs/_build/doctrees/plugins/: apk-plugin.doctree  custom-plugins.doctree  helm-plugin.doctree  overview.doctree  rpm-plugin.doctree
docs/_build/doctrees/user-guide/: cli-commands.doctree  installation.doctree  quickstart.doctree  views.doctree  workflows.doctree
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/api/: modules.html
docs/api/: modules.rst
docs/architecture/: content-addressed-storage.md  database-schema.md  overview.md  plugin-system.md
docs/configuration/: filters.md  overview.md  repositories.md  ssl-authentication.md
docs/plugins/: apk-plugin.md  apt-plugin.md  custom-plugins.md  helm-plugin.md  overview.md  rpm-plugin.md
docs/schema/: README.md  chantal-config.schema.json
docs/user-guide/: cli-commands.md  installation.md  quickstart.md  workflows.md
examples/: README.md  auth-examples.yaml  filter-examples.yaml
examples/apk/: alpine-3.18.yaml  alpine-edge.yaml  container-base.yaml  development.yaml  filtered-signed.yaml  webserver.yaml
examples/apk/distributions/: alpine-3.19.yaml
examples/apk/use-cases/: container-base.yaml
examples/apt/: docker-ce.yaml  filtered-signed.yaml  gitlab.yaml  grafana.yaml  hashicorp.yaml  icinga.yaml  lynis.yaml  verified.yaml
examples/config/: config.yaml
examples/config/conf.d/: rhel9.yaml
examples/helm/: aws.yaml  bitnami.yaml  ci-cd.yaml  kubernetes-charts.yaml  monitoring-observability.yaml
examples/rpm/: docker-ce.yaml  epel.yaml  filtered-signed.yaml  gitlab-runner.yaml  gitlab.yaml  grafana.yaml  hashicorp.yaml  icinga.yaml  lynis.yaml  postgresql.yaml  rhel8.yaml  rhel9.yaml  verified.yaml  zabbix.yaml
poc/: README.md  rhel-cdn-auth-test.py
scripts/: format_yaml.py
src/chantal/: __init__.py
src/chantal/cli/: __init__.py  cache_commands.py  content_commands.py  db_commands.py  main.py  package_commands.py  pool_commands.py  publish_commands.py  repo_commands.py  snapshot_commands.py  view_commands.py
src/chantal/core/: __init__.py  cache.py  config.py  downloader.py  gpg.py  gpg_verify.py  output.py  stats.py  storage.py
src/chantal/db/: __init__.py  connection.py  migrations.py  models.py
src/chantal/plugins/: __init__.py  base.py  rpm.py  rpm_sync.py  view_publisher.py
tests/: __init__.py  test_apk_checksum.py  test_apk_index_fetch.py  test_apk_prune_apkindex.py  test_apk_signing.py  test_apk_sync_dedup.py  test_apk_version.py  test_apt_compression_variants.py  test_apt_filtered.py  test_apt_gpg.py  test_apt_index_decode.py  test_apt_models.py  test_apt_parsers.py  test_apt_publisher.py  test_apt_source_size.py  test_apt_sync.py  test_apt_valid_until.py  test_apt_verify.py  test_apt_version.py  test_cache.py  test_cli.py  test_config.py  test_config_validation.py  test_core_hardening.py  test_db_bigint.py  test_db_cleanup.py  test_db_models.py  test_deb_upload.py  test_decompress_bounds.py  test_helm_pool_path.py  test_helm_publish_dedup.py  test_helm_sync.py  test_helm_sync_dedup.py  test_helm_sync_verify.py  test_helm_upload.py  test_helm_version.py  test_metadata_prune.py  test_migrations.py  test_package_upload.py  test_proxy_auth.py  (+26 more)
tests/e2e/: conftest.py  test_apk_e2e.py  test_apk_real_client_e2e.py  test_apt_arch_all_e2e.py  test_apt_byhash_e2e.py  test_apt_contents_e2e.py  test_apt_e2e.py  test_apt_features_real_client_e2e.py  test_apt_mirror_verbatim_e2e.py  test_apt_pool_layout_e2e.py  test_apt_real_client_e2e.py  test_apt_release_fields_e2e.py  test_apt_sources_e2e.py  test_apt_translation_e2e.py  test_apt_verify_e2e.py  test_deb_real_client_e2e.py  test_helm_e2e.py  test_helm_features_real_client_e2e.py  test_helm_real_client_e2e.py  test_rpm_client_key_e2e.py  test_rpm_e2e.py  test_rpm_features_real_client_e2e.py  test_rpm_modules_e2e.py  test_rpm_real_client_e2e.py  test_rpm_sha512_e2e.py  test_rpm_verify_e2e.py
(+71 files in other folders)
