[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chantal"
version = "0.1.0"
description = "Unified offline repository mirroring for RPM and APT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simon Lauger", email = "simon@lauger.de"}
]
keywords = ["rpm", "yum", "dnf", "repository", "mirror", "sync", "rhel", "centos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Core
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "packaging>=23.0",

    # Database
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # HTTP & Downloads
    "requests>=2.31.0",
    "urllib3>=2.1.0",

    # Compression
    "zstandard>=0.22.0",

    # Progress & UI
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "yamllint>=1.35.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/slauger/chantal"
Documentation = "https://github.com/slauger/chantal#readme"
Repository = "https://github.com/slauger/chantal"
Issues = "https://github.com/slauger/chantal/issues"

[project.scripts]
chantal = "chantal.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chantal = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E402",  # module level import not at top (false positives with docstrings)
    "E501",  # line too long (handled by black)
    "UP017", # use datetime.UTC (not available in Python 3.10)
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Coverage configuration
[tool.coverage.run]
source = ["src/chantal"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
